# videoseek

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: __init__.py  general.yaml  prompts.yaml
videoseek/: __init__.py  agent.py  cli.py  utils.py
videoseek/core/: __init__.py  action.py  observation.py  trajectory.py
videoseek/tools/: __init__.py  answer.py  focus.py  overview.py  registry.py  skim.py
